--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://00Mateo00.github.io/",
+  "homepage": "https://00Mateo00.github.io/portfolio",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
