--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: List files for debugging
+        run: ls -R src/components
+
       - name: Build project
         run: pnpm run build
 
